# pastebin_rocket

./: Cargo.toml
src/: main.rs  paste_id.rs
upload/: pepe
